--- a/package.json
+++ b/package.json
@@ -48,11 +48,13 @@
 		"babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
 		"babel-plugin-transform-react-jsx": "^6.24.1",
 		"babel-preset-stage-2": "^6.24.1",
+		"dotenv-webpack": "^1.5.7",
 		"enzyme": "^3.3.0",
 		"enzyme-adapter-react-16": "^1.1.1",
 		"eslint-config-prettier": "^2.9.0",
 		"eslint-loader": "^2.0.0",
 		"eslint-plugin-prettier": "^2.6.2",
+		"firebase": "^5.3.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^23.3.0",
 		"react": "^16.4.1",
