--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
 		"react-router-dom": "^4.3.1",
+		"react-sortable-hoc": "^0.8.3",
 		"styled-components": "^3.3.3",
 		"webpack": "^4.15.1"
 	},
