--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"eslint-config-prettier": "^2.9.0",
 		"eslint-loader": "^2.0.0",
 		"eslint-plugin-prettier": "^2.6.2",
+		"fecha": "^2.3.3",
 		"firebase": "^5.3.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^23.3.0",
