--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"npm": "^6.3.0",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
+		"react-md-spinner": "^0.3.0",
 		"react-router-dom": "^4.3.1",
 		"react-sortable-hoc": "^0.8.3",
 		"styled-components": "^3.3.3",
