--- a/package.json
+++ b/package.json
@@ -55,10 +55,11 @@
 		"eslint-loader": "^2.0.0",
 		"eslint-plugin-prettier": "^2.6.2",
 		"fecha": "^2.3.3",
-		"firebase": "^5.3.1",
+		"firebase": "^5.4.2",
+		"firebaseui": "^3.4.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^23.3.0",
-		"npm": "^6.3.0",
+		"npm": "^6.4.1",
 		"react": "^16.4.1",
 		"react-dom": "^16.4.1",
 		"react-md-spinner": "^0.3.0",
